# ddev-apis

./: .gitignore  BUILD.bazel  Docker-protoc  Makefile  README.md  WORKSPACE  documentation.yml  package-web.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release-checklist-template.md
.github/workflows/: doc.yaml  release.yaml
doc/api/: administration-api.md  billing-api.html  billing-api.md  site-api.html  site-api.md
live/administration/v1alpha1/: BUILD.bazel  auth.proto  githubintegration.proto  gitlabintegration.proto  quota.proto  service.proto  usage.proto  workspace.proto
live/billing/v1alpha1/: BUILD.bazel  auth.proto  common.proto  customer.proto  plan.proto  product.proto  service.proto  subscription.proto  subscriptionitem.proto  workspace.proto
live/sites/v1alpha1/: BUILD.bazel  database.proto  file.proto  metadata.proto  service.proto  site.proto
