package(default_visibility = ["//visibility:public"])

proto_library(
    name = "auth_proto",
    srcs = [
        "auth.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "service_proto",
    srcs = [
        "service.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":auth_proto",
        ":workspace_proto",
    ],
)

proto_library(
    name = "workspace_proto",
    srcs = [
        "workspace.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)