load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "auth_proto",
    srcs = [
        "auth.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "service_proto",
    srcs = [
        "service.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":auth_proto",
        ":workspace_proto",
    ],
)

proto_library(
    name = "workspace_proto",
    srcs = [
        "workspace.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "v1alpha1_proto",
    srcs = [
        "auth.proto",
        "service.proto",
        "workspace.proto",
    ],
)

go_proto_library(
    name = "v1alpha1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/drud/admin-api/gen/live/administration/v1alpha1",
    proto = ":v1alpha1_proto",
)

go_library(
    name = "go_default_library",
    embed = [":v1alpha1_go_proto"],
    importpath = "github.com/drud/admin-api/gen/live/administration/v1alpha1",
)
