proto_library(
    name = "common_proto",
    srcs = [
        "common.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    import_prefix = "live/billing/v1alpha1",
)

proto_library(
    name = "customer_proto",
    srcs = [
        "customer.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    import_prefix = "live/billing/v1alpha1",
)

proto_library(
    name = "plan_proto",
    srcs = [
        "plan.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "common_proto",
    ],
    import_prefix = "live/billing/v1alpha1",
)

proto_library(
    name = "product_proto",
    srcs = [
        "product.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    import_prefix = "live/billing/v1alpha1",
)

proto_library(
    name = "service_proto",
    srcs = [
        "service.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "customer_proto",
        "subscription_proto",
        "plan_proto",
        "product_proto",
        "workspace_proto",
    ],
    import_prefix = "live/billing/v1alpha1",
)

proto_library(
    name = "subscription_proto",
    srcs = [
        "subscription.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "subscriptionitem_proto",
        "workspace_proto",
    ],
    import_prefix = "live/billing/v1alpha1",
)

proto_library(
    name = "subscriptionitem_proto",
    srcs = [
        "subscriptionitem.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "common_proto",
    ],
    import_prefix = "live/billing/v1alpha1",
)

proto_library(
    name = "workspace_proto",
    srcs = [
        "workspace.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    import_prefix = "live/billing/v1alpha1",
)