load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "database_proto",
    srcs = [
        "database.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "file_proto",
    srcs = [
        "file.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "metadata_proto",
    srcs = [
        "metadata.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "service_proto",
    srcs = [
        "service.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":database_proto",
        ":file_proto",
        ":site_proto",
    ],
)

proto_library(
    name = "site_proto",
    srcs = [
        "site.proto",
    ],
    visibility = [
        "//visibility:public",
    ],
)

proto_library(
    name = "v1alpha1_proto",
    srcs = [
        "database.proto",
        "file.proto",
        "metadata.proto",
        "service.proto",
        "site.proto",
    ],
)

go_proto_library(
    name = "v1alpha1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/drud/site-api/gen/live/sites/v1alpha1",
    proto = ":v1alpha1_proto",
)

go_library(
    name = "go_default_library",
    embed = [":v1alpha1_go_proto"],
    importpath = "github.com/drud/site-api/gen/live/sites/v1alpha1",
)
